@@ -2,6 +2,7 @@ Revision history for Whelk
 
 {{$NEXT}}
 	- Added documentation for Whelk::Schema::Definition
+	- Added documentation for Whelk::OpenAPI
 
 0.05 - 2024-07-06
 	- Framework no longer assumes resource is a subclass of Kelp, allowing custom base controllers
